unpackaged/main/default/objects/AR_Adjustments__c/AR_Adjustments__c.object-meta.xml
<CustomObject>
    <label>AR Adjustments</label>
    <nameField>
        <displayFormat>ARA-{0000}</displayFormat>
        <label>AR_Adjustments_No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>