unpackaged/main/default/objects/AR_Adjustments__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <label>Activity Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection Agency Fee</fullName>
            </value>
            <value>
                <fullName>Finance Charge</fullName>
            </value>
            <value>
                <fullName>Intercompany Adjustment</fullName>
            </value>
            <value>
                <fullName>Inv. Adj. - Currency Exchange</fullName>
            </value>
            <value>
                <fullName>Invoice Balance Write Off</fullName>
            </value>
            <value>
                <fullName>Invoice Reclass</fullName>
            </value>
            <value>
                <fullName>Show Mgt Comm-Assn</fullName>
            </value>
            <value>
                <fullName>Show Mgt Comm-Exhibitor</fullName>
            </value>
            <value>
                <fullName>Contractual Revenue - 47000</fullName>
            </value>
            <value>
                <fullName>Wire Transfer Fee Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>