unpackaged/main/default/objects/AR_Adjustments__c/fields/AR1_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>AR1_Approval_Comments__c</fullName>
    <label>AR1 Approval Comments</label>
    <type>TextArea</type>
</CustomField>