unpackaged/main/default/objects/AR_Adjustments__c/fields/AR1_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>AR1_Approver_Email__c</fullName>
    <label>AR1 Approver Email</label>
    <type>Email</type>
</CustomField>