unpackaged/main/default/objects/AR_Adjustments__c/fields/AR2_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approval_Comments__c</fullName>
    <label>AR2 Approval Comments</label>
    <type>TextArea</type>
</CustomField>