unpackaged/main/default/objects/AR_Adjustments__c/fields/AR2_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver_Email__c</fullName>
    <label>AR2 Approver Email</label>
    <type>Email</type>
</CustomField>