unpackaged/main/default/objects/AR_Adjustments__c/fields/AR2_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR2 Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>AR_Adjustments8</relationshipName>
    <type>Lookup</type>
</CustomField>