unpackaged/main/default/objects/AR_Adjustments__c/fields/AR2_Approver_Status__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver_Status__c</fullName>
    <label>AR2 Approver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>