unpackaged/main/default/objects/AR_Adjustments__c/fields/AR_Adj_CSI_ID__c.field-meta.xml
<CustomField>
    <fullName>AR_Adj_CSI_ID__c</fullName>
    <description>AR_Adj_CSI_ID</description>
    <label>CSI ICS</label>
    <referenceTo>Customer_Service_Inquiries_ICS__c</referenceTo>
    <relationshipName>AR_Adjustments_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>