unpackaged/main/default/objects/AR_Adjustments__c/fields/Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_ID__c</fullName>
    <label>Billing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>