unpackaged/main/default/objects/AR_Adjustments__c/fields/Case_location__c.field-meta.xml
<CustomField>
    <fullName>Case_location__c</fullName>
    <formula>AR_Adj_CSI_ID__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case location</label>
    <type>Text</type>
</CustomField>