unpackaged/main/default/objects/AR_Adjustments__c/fields/Case_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Case_Sales_Channel__c</fullName>
    <formula>Text(AR_Adj_CSI_ID__r.Sales_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Sales Channel</label>
    <type>Text</type>
</CustomField>