unpackaged/main/default/objects/AR_Adjustments__c/fields/CSO_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approval_Comments__c</fullName>
    <label>CSO Approval Comments</label>
    <type>TextArea</type>
</CustomField>