unpackaged/main/default/objects/AR_Adjustments__c/fields/CSO_Approver_EmailID__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approver_EmailID__c</fullName>
    <formula>CSO_Approver_Name__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSO Approver EmailID</label>
    <type>Text</type>
</CustomField>