unpackaged/main/default/objects/AR_Adjustments__c/fields/CSO_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSO Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>AR Adjustments (CSO Approver Name)</relationshipLabel>
    <relationshipName>AR_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>