unpackaged/main/default/objects/AR_Adjustments__c/fields/DAM_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>DAM_Approver_Comments__c</fullName>
    <label>DAM Approver Comments</label>
    <type>TextArea</type>
</CustomField>