unpackaged/main/default/objects/AR_Adjustments__c/fields/DAM_Approver_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>DAM_Approver_Email_ID__c</fullName>
    <label>DAM Approver Email ID</label>
    <type>Email</type>
</CustomField>