unpackaged/main/default/objects/AR_Adjustments__c/fields/DAM_LOB_Approver__c.field-meta.xml
<CustomField>
    <fullName>DAM_LOB_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DAM/LOB Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>AR_Adjustments5</relationshipName>
    <type>Lookup</type>
</CustomField>