unpackaged/main/default/objects/AR_Adjustments__c/fields/Del_AR1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_AR1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_AR1 Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>AR_Adjustments4TcX</relationshipName>
    <type>Lookup</type>
</CustomField>