unpackaged/main/default/objects/AR_Adjustments__c/fields/Del_AR2_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Del_AR2_Approver_Email__c</fullName>
    <formula>Del_AR2_Approver__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Del_AR2 Approver Email</label>
    <type>Text</type>
</CustomField>