unpackaged/main/default/objects/AR_Adjustments__c/fields/Del_CSO_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_CSO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del CSO Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>AR Adjustments (Del CSO Approver)</relationshipLabel>
    <relationshipName>AR_Adjustments1</relationshipName>
    <type>Lookup</type>
</CustomField>