unpackaged/main/default/objects/AR_Adjustments__c/fields/Del_DAM_LOB_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_DAM_LOB_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_DAM/LOB Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>AR_Adjustments9</relationshipName>
    <type>Lookup</type>
</CustomField>