unpackaged/main/default/objects/AR_Adjustments__c/fields/Del_DAM_LOB_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Del_DAM_LOB_Approver_Email__c</fullName>
    <formula>Del_DAM_LOB_Approver__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Del DAM LOB Approver Email</label>
    <type>Text</type>
</CustomField>