unpackaged/main/default/objects/AR_Adjustments__c/fields/Del_F_R_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_F_R_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_F&amp;R Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>AR_Adjustments4TcS</relationshipName>
    <type>Lookup</type>
</CustomField>