unpackaged/main/default/objects/AR_Adjustments__c/fields/F_A_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>F_A_Approver_Email__c</fullName>
    <label>F&amp;A Approver Email</label>
    <type>Email</type>
</CustomField>