unpackaged/main/default/objects/AR_Adjustments__c/fields/F_R_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>F_R_Approval_Comments__c</fullName>
    <label>F&amp;R Approval Comments</label>
    <type>TextArea</type>
</CustomField>