unpackaged/main/default/objects/AR_Adjustments__c/fields/F_R_Approver__c.field-meta.xml
<CustomField>
    <fullName>F_R_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F&amp;R Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>AR_Adjustments6</relationshipName>
    <type>Lookup</type>
</CustomField>