unpackaged/main/default/objects/AR_Adjustments__c/fields/Justification_for_AR_Adjustment_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_AR_Adjustment_Request__c</fullName>
    <label>Justification for AR Adjustment Request</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>