unpackaged/main/default/objects/AR_Adjustments__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>AUDIO VISUAL</fullName>
            </value>
            <value>
                <fullName>DECO</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL</fullName>
            </value>
            <value>
                <fullName>FREIGHT</fullName>
            </value>
            <value>
                <fullName>GRAPHICS</fullName>
            </value>
            <value>
                <fullName>HANGING SIGN/ RIGGING</fullName>
            </value>
            <value>
                <fullName>I&amp;D LABOR</fullName>
            </value>
            <value>
                <fullName>JANITORIAL</fullName>
            </value>
            <value>
                <fullName>LOGISTICS</fullName>
            </value>
            <value>
                <fullName>PLUMBING</fullName>
            </value>
            <value>
                <fullName>Corporate Accounts (program/priority)</fullName>
            </value>
            <value>
                <fullName>Furniture/Accessories (aka: Deco)</fullName>
                <isActive>false</isActive>
                <label>Furniture/Accessories (aka: Deco)</label>
            </value>
            <value>
                <fullName>Hanging Sign</fullName>
                <isActive>false</isActive>
                <label>Hanging Sign</label>
            </value>
            <value>
                <fullName>I&amp;D</fullName>
                <isActive>false</isActive>
                <label>I&amp;D</label>
            </value>
            <value>
                <fullName>Labor</fullName>
                <isActive>false</isActive>
                <label>Labor</label>
            </value>
            <value>
                <fullName>RIGGING</fullName>
                <isActive>false</isActive>
                <label>RIGGING</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>