unpackaged/main/default/objects/AR_Adjustments__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Fee</fullName>
            </value>
            <value>
                <fullName>Bank Fee</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Foreign Currency Adjustment</fullName>
            </value>
            <value>
                <fullName>G50 Clearing</fullName>
            </value>
            <value>
                <fullName>Int Adjust</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Invoice Balance Write Off</fullName>
            </value>
            <value>
                <fullName>Off Set</fullName>
            </value>
            <value>
                <fullName>Reclass Inv</fullName>
            </value>
            <value>
                <fullName>Recover Bad Debt</fullName>
            </value>
            <value>
                <fullName>Reverse Bad Debt</fullName>
            </value>
            <value>
                <fullName>Settlement Credit Memo</fullName>
            </value>
            <value>
                <fullName>Small Amt Remaining</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>