unpackaged/main/default/objects/AR_Adjustments__c/fields/Total_AR_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_AR_Currency__c</fullName>
    <formula>AR_Adj_CSI_ID__r.Adjustment_Total_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total AR Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>