unpackaged/main/default/objects/AR_Adjustments__c/validationRules/ICS_AR_Cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_AR_Cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR
(
ISPICKVAL( AR_Adj_CSI_ID__r.Case_Approval_Status__c , &#39;Case Approved&#39; ), 
ISPICKVAL( AR_Adj_CSI_ID__r.Case_Approval_Status__c , &#39;Requestor Submitted&#39; ),
ISPICKVAL( AR_Adj_CSI_ID__r.Case_Approval_Status__c , &#39;LOB Submitted&#39; ),
ISPICKVAL( AR_Adj_CSI_ID__r.Case_Approval_Status__c , &#39;F&amp;R Submitted&#39; ),
ISPICKVAL( AR_Adj_CSI_ID__r.Case_Approval_Status__c , &#39;AR1 Submitted&#39; ),
ISPICKVAL( AR_Adj_CSI_ID__r.Case_Approval_Status__c , &#39;AR2 Submitted&#39; )
),
OR (ISCHANGED( Amount__c),
ISCHANGED( Activity_Name__c ),  
ISCHANGED(Reason__c ), 
ISCHANGED(Justification_for_AR_Adjustment_Request__c), 
ISCHANGED( Billing_ID__c  ),
ISCHANGED(  Sales_Order__c )
))</errorConditionFormula>
    <errorMessage>Case is Already Submitted for Approval. 
You don&#39;t have access to Modify.</errorMessage>
</ValidationRule>