unpackaged/main/default/objects/AR_Adjustments__c/validationRules/ICS_SalesOrderNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_SalesOrderNumber</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(isblank(Sales_Order__c)),NOT(ISNUMBER(  Sales_Order__c  )))</errorConditionFormula>
    <errorDisplayField>Sales_Order__c</errorDisplayField>
    <errorMessage>Please Verify the Sales Order #</errorMessage>
</ValidationRule>